# Squirrel

./: .pre-commit-config.yaml  .tool-versions  AGENTS.md  DEVELOPMENT_PLAN.md  EXAMPLE.md  HANDOVER.md  LICENSE  README.md  devenv.nix  pyproject.toml  requirements.txt  test_pipeline.py
.cursor/rules/: rust-daemon.mdc
.githooks/: pre-commit
daemon/: Cargo.toml
daemon/src/: config.rs  error.rs  lib.rs  main.rs
daemon/src/cli/: agents.rs  config.rs  daemon.rs  export.rs  flush.rs  forget.rs  gitignore.rs  goaway.rs  history.rs  hooks.rs  import.rs  init.rs  instructions.rs  internal.rs  mcp.rs  mod.rs  policy.rs  search.rs  service.rs  status.rs  sync.rs  watch.rs
daemon/src/config/: mod.rs
daemon/src/dashboard/: api.rs  mod.rs
daemon/src/dashboard/static/: index.html
daemon/src/db/: mod.rs  schema.rs
daemon/src/global_config/: mod.rs
daemon/src/ipc/: mod.rs
daemon/src/mcp/: mod.rs
daemon/src/storage/: mod.rs
daemon/src/watcher/: buffer.rs  file_watcher.rs  history.rs  log_parser.rs  mod.rs  session_tracker.rs
daemon/src/web/: api.rs  mod.rs
daemon/src/web/static/: index.html
docs/: DEVELOPMENT.md  PROJECT_STRUCTURE.md
reference/: .gitignore  CLAUDE_CACHE_ANALYSIS.md  MEM0_LEARNING_ANALYSIS.md
reference/competitors/coder-mcp/: .coveragerc  .editorconfig  .env.example  .flake8  .gitignore  .markdownlint.json  .mcpignore  .poetryignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  makefile  package.json  pytest.ini  run_mcp_server.py  sample.py  setup.cfg  test-results.xml  tox.ini
reference/competitors/coder-mcp/.coder_mcp/: context.json
reference/competitors/coder-mcp/.github/workflows/: ci.yml  publish.yml
reference/competitors/coder-mcp/api/: auth.py  userauth.py  userprofile.py
reference/competitors/coder-mcp/docs/: AI_ENHANCEMENT_MIGRATION.md  API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  DEVELOPER_GUIDE.md  ENHANCED_FILE_EDITING.md  TESTING.md  TROUBLESHOOTING.md  VECTOR_SEARCH_IMPROVEMENTS.md
reference/competitors/coder-mcp/docs/examples/: advanced_features.py  basic_usage.py
reference/competitors/coder-mcp/scripts/: setup_test_env.sh
reference/competitors/coder-mcp/services/: validationservice_service.py
reference/competitors/coder-mcp/tests/: HELPER_INSTRUCTIONS.md  README.md  TESTING_GUIDE.md  conftest.py  docker-compose.yml  test_test_health_check.py
reference/competitors/coder-mcp/tests/docker/mock-openai/: app.py
reference/competitors/coder-mcp/tests/e2e/: test_complete_workflows.py
reference/competitors/coder-mcp/tests/examples/: test_mock_usage_examples.py
reference/competitors/coder-mcp/tests/fixtures/mock_responses/: mcp_messages.json  openai_responses.json
reference/competitors/coder-mcp/tests/fixtures/templates/: conftest.py
reference/competitors/coder-mcp/tests/fixtures/test_files/: invalid_syntax.py  valid_python.py
reference/competitors/coder-mcp/tests/helpers/: OPTIMIZATION_SUMMARY.md  assertions.py  async_patterns.py  builders.py  config_testing.py  debug.py  mocks.py  performance.py  server_testing.py  test_python_generator_base.py  utils.py
reference/competitors/coder-mcp/tests/integration/: test_editing_integration.py  test_mcp_server.py  test_python_generator_integration.py
reference/competitors/coder-mcp/tests/performance/: test_file_operations_perf.py
reference/competitors/coder-mcp/tests/reports/: .gitignore
reference/competitors/coder-mcp/tests/unit/: test_code_analyzer.py  test_context_manager.py  test_file_discovery.py  test_file_operations.py  test_mocks.py  test_modular_enhancers.py  test_python_generator.py  test_server_comprehensive.py  test_tool_response_handler.py  test_tools_main_handlers.py  test_utils.py  test_vector_search_enhanced.py  test_workspace_detector.py
reference/competitors/coder-mcp/tests/unit/analysis/: __init__.py  test_analysis_result.py  test_analysis_result_comprehensive.py  test_analyzer_factory.py  test_analyzer_factory_comprehensive.py  test_base_analyzer.py  test_base_analyzer_comprehensive.py  test_code_smells.py  test_collectors.py  test_complexity.py  test_dependency_analyzer_pyproject.py  test_detectors.py  test_detectors_comprehensive.py  test_duplicates_comprehensive.py  test_file_metrics.py  test_init.py  test_init_module.py  test_languages.py  test_metrics.py  test_metrics_comprehensive.py  test_metrics_integration.py  test_pattern_detectors_comprehensive.py  test_quality.py  test_quality_scoring.py  test_quality_scoring_comprehensive.py  test_security_detectors_comprehensive.py  test_visitors_comprehensive.py
reference/competitors/coder-mcp/tests/unit/analysis/metrics/: __init__.py  test_coverage_reader.py
reference/competitors/coder-mcp/tests/unit/context/: __init__.py
reference/competitors/coder-mcp/tests/unit/context/search/: test_hybrid_search.py
reference/competitors/coder-mcp/tests/unit/core/: test_config.py
reference/competitors/coder-mcp/tests/unit/editing/: __init__.py
reference/competitors/coder-mcp/tests/unit/editing/core/: __init__.py  test_errors.py
reference/competitors/coder-mcp/tests/unit/editing/strategies/: __init__.py  test_instruction_parser_fixed.py
reference/competitors/coder-mcp/tests/unit/editing/utils/: __init__.py  test_patterns.py  test_progress.py
reference/competitors/coder-mcp/tests/unit/security/: test_validators.py
reference/competitors/coder-mcp/tests/unit/storage/: __init__.py
reference/competitors/coder-mcp/tests/unit/storage/embeddings/: __init__.py  test_providers.py
reference/competitors/coder-mcp/tests/unit/storage/search/: __init__.py  test_init.py  test_metrics.py  test_reranker.py
reference/competitors/coder-mcp/tests/unit/tools/: test_editing_tools.py
scripts/: setup.sh
specs/: ARCHITECTURE.md  CONSTITUTION.md  DECISIONS.md  INTERFACES.md  KEYS.md  POLICY.md  PROMPTS.md  SCHEMAS.md  V1_ARCHITECTURE_REDESIGN.md
src/sqrl/: __init__.py  chunking.py  embeddings.py  ingest.py  retrieval.py
src/sqrl/db/: __init__.py  (+1 more)
tests/: __init__.py  test_chunking.py  test_e2e.py  test_embeddings.py  test_integration.py
(+108 files in other folders)
