# setup.cfg - Configuration for development tools

[metadata]
name = coder-mcp
version = 5.0.0
description = World-class MCP Server for Claude Desktop with intelligent code assistance
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
license_files = LICENSE
url = https://github.com/coder-mcp/coder-mcp
project_urls =
    Documentation = https://github.com/coder-mcp/coder-mcp#documentation
    Source = https://github.com/coder-mcp/coder-mcp
    Tracker = https://github.com/coder-mcp/coder-mcp/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Editors :: Integrated Development Environments (IDE)

[options]
python_requires = >=3.13
packages = find:
include_package_data = True
zip_safe = False

[options.packages.find]
where = .
include = coder_mcp*
exclude =
    tests*
    docs*
    examples*

[flake8]
max-line-length = 100
max-complexity = 10
extend-ignore =
    E203,
    W503,
    ANN101,
    ANN102,
    D100,
    D104,
    I001,
    I005
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    .eggs,
    *.egg,
    build,
    dist,
    .pytest_cache,
    .mypy_cache,
    .tox,
    docs,
    tests/fixtures
per-file-ignores =
    tests/*:D101,D102,D103,S101,S105,S106
    __init__.py:D104
    */config.py:C901
    */settings.py:C901

[mypy]
python_version = 3.13
warn_return_any = True
warn_unused_configs = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_optional = True
disallow_untyped_defs = True
disallow_untyped_calls = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True
check_untyped_defs = True
no_implicit_optional = True
namespace_packages = True
pretty = True
show_error_codes = True
show_error_context = True
show_column_numbers = True

[mypy-tests.*]
disallow_untyped_defs = False
disallow_untyped_calls = False

[mypy-setup]
ignore_errors = True

[mypy-astroid.*]
ignore_missing_imports = True

[mypy-mcp.*]
ignore_missing_imports = True

[mypy-redis.*]
ignore_missing_imports = False

[mypy-aiofiles.*]
ignore_missing_imports = False

[mypy-pytest.*]
ignore_missing_imports = True

[pylint]
fail-under = 8.0

[pylint.messages_control]
disable =
    C0111,
    C0103,
    R0903,
    R0901,
    W0212,
    W0621,
    E1101

[pylint.format]
max-line-length = 100
max-module-lines = 1000

[pylint.design]
max-args = 7
max-locals = 15
max-returns = 6
max-branches = 12
max-statements = 50
max-parents = 7
max-attributes = 10
min-public-methods = 1
max-public-methods = 20
max-bool-expr = 5

[pylint.similarities]
min-similarity-lines = 4
ignore-comments = yes
ignore-docstrings = yes
ignore-imports = yes

[isort]
profile = black
line_length = 100
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
skip = venv,.venv,build,dist,.eggs,.git,.mypy_cache,.pytest_cache,.tox
known_first_party = coder_mcp
known_third_party = mcp,pydantic,redis,numpy,openai,aiofiles,click,rich,astroid,jinja2

[bandit]
exclude = /tests/,/venv/,/.venv/,/build/,/dist/
skips = B101,B601,B104

[coverage:run]
source = coder_mcp
branch = True
omit =
    */tests/*
    */test_*
    */__pycache__/*
    */venv/*
    */.venv/*
    */virtualenv/*
    */dist/*
    */build/*
    */.eggs/*
    setup.py
    */migrations/*

[coverage:report]
precision = 2
show_missing = True
skip_covered = False
exclude_lines =
    pragma: no cover
    def __repr__
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    if TYPE_CHECKING:
    @typing.overload
    @overload

[coverage:html]
directory = htmlcov

[coverage:xml]
output = coverage.xml

[tool:pytest]
minversion = 8.0
testpaths = tests
python_files = test_*.py *_test.py
python_classes = Test* *Tests
python_functions = test_*
asyncio_mode = auto
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    unit: marks tests as unit tests
    redis: marks tests that require Redis
    external: marks tests that require external services
addopts =
    -ra
    --strict-markers
    --cov=coder_mcp
    --cov-report=term-missing
    --cov-report=html
    --cov-report=xml
    --tb=short
    --maxfail=1
timeout = 300
timeout_method = thread
log_cli = True
log_cli_level = INFO
log_cli_format = %(asctime)s [%(levelname)8s] %(message)s
log_cli_date_format = %Y-%m-%d %H:%M:%S

[egg_info]
tag_build =
tag_date = 0
